src/kubernetesLearn/nginx-sidecar-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
    - name: sidecar
      image: curlimages/curl
      command: ["/bin/sh"]
      args: ["-c", "echo hello from sidecar container; sleep 300"]
