src/kubernetesLearn/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-2
  labels:
    app: postgres-2
spec:
  containers:
    - name: postgres
      image: postgres
      ports:
        - containerPort: 5432
